# capstone

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb  data_processing.ipynb  results.ipynb  supplemental.ipynb  train.ipynb
scripts/: conversion.py  data_exploration.py  data_processing.py  results.py  supplemental.py  utils.py
